<resources>
    <string name="app_name">Cyberark Identity Sample</string>
    <string name="button_log_in">Login</string>
    <string name="button_log_out">Logout</string>
    <string name="button_enroll">&#160;&#160;Opt in for MFA&#160;&#160;</string>
    <string name="tv_qr_authenticator">&#160;&#160;QR Authenticator&#160;&#160;</string>
    <string name="invoke_biometrics_on_app_launch">On app launch</string>
    <string name="invoke_biometrics_on_qr_code_launch">On QR Code Authenticator</string>
    <string name="invoke_biometrics_when_access_token_expires">When access token expires</string>
    <string name="dialog_header_text">ACME</string>
    <string name="dialog_biometric_desc">Required to enroll biometric in the device</string>
    <string name="dialog_access_token_expire_desc">Access token is expired. Would you like to get new Access Token using refresh token?</string>
    <string name="dialog_refresh_token_expire_desc">Refresh token is expired. You need to login again</string>
    <string name="notification_login_text">Login Request</string>
    <string name="notification_action_approve">Approve</string>
    <string name="notification_action_deny">Deny</string>
    <string name="notification_channel_id" translatable="false">CyberArk SDK Channel ID</string>
    <string name="notification_channel_name">CyberArk SDK Channel Name</string>
    <string name="notification_channel_description">CyberArk SDK Channel Description</string>
    <string name="cyberark_identity_login_request_received">CyberArk Identity login request received, do you want to grant access for user?</string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>
    <string name="product_icon">product_icon</string>
    <string name="settings">Settings</string>
    <string name="acme">Acme Inc</string>
    <string name="system_url">System URL</string>
    <string name="host_url">Host URL</string>
    <string name="client_id">Client ID</string>
    <string name="app_id">App ID</string>
    <string name="response_type">Response Type</string>
    <string name="scope">Scope</string>
    <string name="redirect_uri">Redirect URI</string>
    <string name="host">Host</string>
    <string name="scheme">Scheme</string>
    <string name="site_key">ReCaptcha V2 Site Key</string>
    <string name="save">Save</string>
    <string name="user_info">User Info</string>
    <string name="logout">Logout</string>
    <string name="app_configs">App Configs:</string>
    <string name="invoke_biometrics">Invoke Biometrics:</string>
    <string name="user_info_label">User Info:</string>
    <string name="for_developer_guides_and_api_documentation">For developer guides and API documentation, please visit <a href="https://identity-developer.cyberark.com"><b>CyberArk Identity Developer Program</b></a> website</string>
    <string name="welcome_to_acme_inc">Welcome to Acme Inc. !!​</string>
    <string name="acme_inc_is_a_banking_company">Acme Inc. is a banking company using CyberArk Identity APIs, SDKs, and widgets to secure its web applications and mobile applications. This playground application shows all the possible variations that a developer from Acme has at their disposal.</string>
    <string name="get_started">&#160;&#160;Get Started&#160;&#160;</string>
    <string name="cyberark_hosted_login">Signup and login using \nCyberArk Identity</string>
    <string name="start">Start</string>
    <string name="learn_more"><u>Learn More</u></string>
    <string name="login_widget">Login Widget</string>
    <string name="mfa_widget">MFA Widget</string>
    <string name="cancel">Cancel</string>
    <string name="signup_and_login_using_cyberArk_identity">Signup and login using \nCyberArk Identity</string>
    <string name="signup_and_login_using_cyberArk_identity_desc">In this scenario, Acme Inc. is using CyberArk Identity as their IDP. Acme Inc. wants to leverage the MFA of CyberArk Identity to authenticate the users. \n
\nIf the user has not registered before, the user will need to signup. A user account will be created for the user in CyberArk Identity on registration. \n\nOnce the user signup is successful, the user can log in to the Acme Inc. mobile app after completing the corresponding MFA challenges.</string>
    <string name="login_hosted_end">\nPlease visit <a href="https://identity-developer.cyberark.com/docs/cyberark-idetity-sdk-for-android/"><b>here</b></a> for details on implementation.</string>
    <string name="click_on_active_mfa">Click on “Opt in for MFA” button to silently enroll the mobile device to CyberArk Identity. The access token retrieved in previous step is used to enroll the user.</string>
    <string name="enrolling_the_mobile_device_enables">Enrolling the mobile device enables the user to leverage the QR code authenticator and mobile push authenticator service provided by CyberArk Identity.</string>
    <string name="click_on_qr_code_authenticator">Click on “QR code authenticator” to open the QR code authenticator. The user should scan the QR Code displayed on the Acme website using this authenticator for successful authentication to the website.</string>
    <string name="login_request">Login Request</string>
    <string name="access_token_and_refresh_token_received">Access token and refresh token received</string>
    <string name="access_token_received">Access token received</string>
    <string name="authentication_is_successful">Authentication is successful</string>
    <string name="login_to_acme_inc">Login to Acme Inc !!</string>
    <string name="signup_to_acme_inc">Signup to Acme Inc !!</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="enter_star_sign">*</string>
    <string name="enter_your_username">Username:</string>
    <string name="enter_your_password">Password:</string>
    <string name="confirm_your_password">Confirm Password:</string>
    <string name="enter_your_email_address">Email Address:</string>
    <string name="enter_your_mobile_number">Mobile Number:</string>
    <string name="once_the_user_enters_the_amount">Once the user enters the amount and clicks on “Transfer funds” the CyberArk Identity MFA widget is loaded, and the user is asked to clear the challenges.</string>
    <string name="once_user_clears_the_challenges">Once user clears the challenges the user will be able to do the funds transfer successfully.</string>
    <string name="please_visit_to_get_detailed_instruction_MFA_widget">\nPlease visit <a href="https://identity-developer.cyberark.com/docs/cyberark-idetity-sdk-for-android/"><b>here</b></a> to get detailed instructions to create the MFA widget.</string>
    <string name="please_visit_to_get_detailed_instruction">\nPlease visit <a href="https://identity-developer.cyberark.com/docs/cyberark-idetity-sdk-for-android/"><b>here</b></a> for details on implementation.</string>
    <string name="transfer_funds">&#160;&#160;Transfer funds&#160;&#160;</string>
    <string name="amount">Amount</string>
    <string name="please_enter_an_amount">Please enter an amount</string>
    <string name="dialog_login_error_header_text">Login Error</string>
    <string name="dialog_signup_error_header_text">Signup Error</string>
    <string name="dialog_logout_error_header_text">Logout Error</string>
    <string name="dialog_session_timeout_error_header_text">Session Timeout Error</string>
    <string name="dialog_login_error_desc">Invalid Username or Password, please try again.</string>
    <string name="dialog_logout_error_desc">Unable to perform logout.</string>
    <string name="dialog_signup_error_desc">Invalid data, please try again.</string>
    <string name="dialog_session_timeout_error_desc">User Session Ended. Please login again to proceed.</string>
    <string name="cyberark_hosted_login_configs">CyberArk hosted login config:</string>
    <string name="step_up_authentication_configs">Step-up authentication config:</string>
    <string name="native_login_url">Native Login URL</string>
    <string name="on_transfer_funds">On transfer funds</string>
    <string name="button_done">Done</string>
    <string name="button_retry">Retry</string>
    <string name="transfer_fund_login_success_title">Awesome!</string>
    <string name="transfer_fund_login_success_desc">Your funds have been transferred successfully</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="have_you_already_registered">Have you already registered? \nConsider login…</string>
    <string name="your_signup_is_successful">Your signup is successful</string>
    <string name="do_you_want_to_login">Do you want to login?</string>
    <string name="your_signup_has_failed">Your signup has failed</string>
    <string name="mfa_widget_login">Step-up authentication \nusing MFA widget</string>
    <string name="mfa_widget_login_title">Step-up authentication using MFA widget</string>
    <string name="mfa_widget_login_description">In this scenario Acme Inc wants to provide step-up authentication to end user when the user tries to do funds transfer. \n
\nTo satisfy this scenario Acme Inc uses the CyberArk Identity MFA widget and embeds the widget into the Acme mobile app using the CyberArk Identity mobile SDK.</string>
    <string name="mfa_widget_url">MFA Widget host URL</string>
    <string name="mfa_widget_id">MFA Widget ID</string>
    <string name="authentication_widgets">Authentication Widgets</string>
    <string name="authentication_widgets_title">Authentication Widgets</string>
    <string name="authentication_widgets_description">The admin of Acme Inc. creates the authentication widget on the CyberArk Identity portal and uses the page URL to embed the widget into the mobile app. The widget adds sign up and sign in capabilities to your website or mobile app.
        \n\nEnd-users who sign up are added to the CyberArk Cloud Directory. You can leverage CyberArk Identity\'s authentication and authorization features to secure their accounts. Once the end-user signs up, they are re-directed to the sign in form in the widget to securely sign in using multi-factor authentication.
        \n\nThe same widget prompts end-users to authenticate to your website with MFA. The widget can be integrated with sign in protocols such as OIDC/SAML to authorize a user.</string>
    <string name="authentication_widgets_proceed">Proceed</string>
    <string name="authentication_widget_configs">Authentication widget config:</string>
    <string name="authentication_widget_url">Auth Widget host URL</string>
    <string name="authentication_widget_id">Auth Widget ID</string>
    <string name="authentication_widget_resource_url">Resource URL</string>
    <string name="user_info_auth_time">Auth time:</string>
    <string name="user_info_given_name">Given name:</string>
    <string name="user_info_name">Name:</string>
    <string name="user_info_email">Email:</string>
    <string name="user_info_family_name">Family name:</string>
    <string name="user_info_preferred_username">Preferred \nusername:</string>
    <string name="user_info_unique_name">Unique name:</string>
    <string name="user_info_email_verified">Email verified:</string>
</resources>