<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021 CyberArk Software Ltd. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:padding="10dp"
    tools:context=".scenario1.MFAActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/cardViewLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark_blue"
                    card_view:cardCornerRadius="20dp"
                    card_view:cardElevation="10dp"
                    card_view:cardUseCompatPadding="true">

                    <LinearLayout
                        android:id="@+id/content_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:text="@string/once_the_user_enters_the_amount"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:text="@string/once_user_clears_the_challenges"/>

                        <TextView
                            android:id="@+id/api_doc_mfa_widget"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:text="@string/please_visit_to_get_detailed_instruction_MFA_widget"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/api_doc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/please_visit_to_get_detailed_instruction"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edit_text_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:singleLine="true"
                        android:hint="@string/amount"/>

                    <TextView
                        android:id="@+id/enter_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/please_enter_an_amount"
                        android:textAlignment="center"
                        android:textColor="@color/red"
                        android:visibility="gone"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/button_transfer_funds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/purple_500"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/transfer_funds"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar_mfa_activity"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="2dp"
        android:foregroundGravity="center"
        android:translationZ="2dp"
        android:visibility="gone" />

</RelativeLayout>