<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022 CyberArk Software Ltd. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".scenario2.NativeLoginSettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:id="@+id/after_login_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/invoke_biometrics"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginBottom="15dp"/>

                <CheckBox
                    android:id="@+id/biometrics_on_app_launch_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/invoke_biometrics_on_app_launch"
                    android:textSize="16sp"
                    android:checked="true"/>

                <CheckBox
                    android:id="@+id/biometrics_on_transfer_fund_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/on_transfer_funds"
                    android:textSize="16sp"
                    android:checked="true"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/before_login_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/step_up_authentication"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="15dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="15dp"
                    android:visibility="gone"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/native_login_url" />

                <EditText
                    android:id="@+id/editTextBasicLoginURL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textUri"
                    tools:ignore="LabelFor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mfa_widget_url" />

                <EditText
                    android:id="@+id/editTextMFAWidgetHostURL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textUri"
                    tools:ignore="LabelFor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mfa_widget_id" />

                <EditText
                    android:id="@+id/editTextMFAWidgetId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textUri"
                    tools:ignore="LabelFor" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>